added skills content

--- a/index.html
+++ b/index.html
@@ -53,6 +53,35 @@
         </div>
     </div>
 </section>
+<section class="what-i-do">
+    <h3 class="section-title">What I Do</h3>
+    <div class="skills-container">
+        <div class="skill">
+            <img src="portfolio-resources/images/icons/js.png" alt="">
+            <p class="skill-tittle">Vanilla Javascript</p>
+            <p class="skill-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe est nobis rerum, voluptates vel placeat.</p>
+        </div>
+        <div class="skill">
+            <img src="portfolio-resources/images/icons/react.png" alt="">
+            <p class="skill-tittle">React</p>
+            <p class="skill-description">Necessitatibus doloribus quo dolorem laborum quia tempora. Quas similique, cupiditate pariatur accusamus at vero beatae!</p>
+        </div>
+        <div class="skill">
+            <img src="portfolio-resources/images/icons/mongo.png" alt="">
+            <p class="skill-tittle">Mongodb</p>
+            <p class="skill-description">Ea voluptates dolore harum suscipit laudantium corrupti inventore at, ipsa sapiente, exercitationem quibusdam incidunt alias!</p>
+        </div>
+        <div class="skill">
+            <img src="portfolio-resources/images/icons/nodejs.png" alt="">
+            <p class="skill-tittle">NodeJS</p>
+            <p class="skill-description">Ex ipsa iusto repellendus, aperiam natus non. Cupiditate error obcaecati accusamus tempora tenetur odio eum.</p>
+        </div>
+    </div>
+
+</section>
+<section class="resume">
+    <h3 class="section-title">A Summary of My Resume</h3>
+</section>
     </main>
     <footer>
 
